# claude-session-replay

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.en.md  README.md  STRUCTURE.md  aider-log2model.py  claude-log2model.py  claude-session-replay.py  codex-log2model.py  cursor-log2model.py  gemini-log2model.py  log-model-renderer.py  log-replay-gif.py  log-replay-mp4.py  log-replay-pdf.py  log-replay-stream.py  log-replay.py  log_replay_tui.py  output_2026-02-22.html  pyproject.toml  run-web.sh  search_utils.py  session-shipper.py  session-stats.py  shipper-config.json  tui  web_ui.py
.github/workflows/: ci.yml
docs/: agent-adapters.md  agents-ja.md  agents.md  architecture-ja.md  architecture.md  backlog.md  data-model.md  enterprise-deployment-guide.md  getting-started-ja.md  getting-started.md  output-formats.md  plan-session-shipper.md  renderers-ja.md  renderers.md  spec-enterprise-shipping.md  vision.md
docs/media/: codex-terminal-1-35-10s.webm
spec/: SPEC.md
templates/: index.html
tests/: conftest.py  test_claude_adapter.py  test_renderer.py  test_search_utils.py
tests/fixtures/: claude_session.jsonl
